--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -54,7 +54,7 @@ For each size class of small objects, \NM{} maintains a freelist for each node a
  
 During the implementation, \NA{} only allocates potentially-shared objects from the main thread in the interleaved heap. Although it may benefit the performance, if shared objects allocated in children threads are also using the interleaved heap. However, the overhead of tracking shared objects is typically larger than the performance benefit, based on our evaluation (skipped in the paper). 
 
-It is very important to identify shared objects correctly and efficiently. \NA{} utilizes the allocation/deallocation site to identify shared objects: every allocation of the main thread is treated as a shared one initially, and is allocated from the interleaved heap. The callsite-based method is aligned with the intuition, since the shared behavior of a callsite is determined by the program logic. When a newly-allocated object is deallocated before creating children threads, all objects from the corresponding callsite are considered to be private objects, and then are only allocated from the per-node heap afterwards. Overall, \NM{} monitors memory allocation/deallocation pattern to identify whether a corresponding callsite is shared or not. 
+It is very important to identify shared objects correctly and efficiently. \NA{} utilizes the allocation/deallocation site to identify shared objects: every allocation of the main thread is treated as a shared one initially, and is allocated from the interleaved heap. The callsite-based method is aligned with the intuition, since the shared behavior of a callsite is determined by the program logic. When a newly-allocated object is deallocated before creating children threads, all objects from the corresponding callsite are considered to be private objects, and then are only allocated from the per-node heap afterward. Overall, \NM{} monitors memory allocation/deallocation pattern to identify whether a corresponding callsite is shared or not. 
 %Therefore, \NA{} utilizes the callsite to differentiate objects, which is determined by the program logic.  
 
 %However, it is very challenging to determine the allocation callsite \textit{uniquely} and \textit{efficiently} due to multiple reasons. First, function pointers are removed in most applications if they were compiled with an optimization, which makes it impossible to obtain return addresses (and callsite) via built-in functions. Second, applications have a wrapper for memory allocations, which requires multiple levels of call stacks to uniquely identify one callsite. Although there exist mechanisms to encode calling context explicitly~\cite{DBLP:conf/icse/SumnerZWZ10, DBLP:conf/cgo/ZengR0AJ014}, they require the recompilation of the applications. The \texttt{backtrace} function can obtain the callsite, but it is too slow to be used in production environment.
@@ -79,7 +79,7 @@ However, existing studies showed that the transparent huge page support of the O
 %In addition to large objects that has the size larger than the size of a huge page, huge pages are only utilized for small objects that are predicted to be used a lot.  \NA{} employs the history of memory allocation to predict this. 
 %Each per-node heap is further divided into two parts as illustrated in Fig.~\ref{fig:overview}: small objects will be allocated from the first half and will be allocated using small pages, while big objects will be allocated from the second half with huge pages (2MB). When a big object (with the huge page) is utilized for small objects, only frequently-allocated small objects can utilize such an object. We believe that our design balances the performance and memory consumption.   
 
-\subsection{Efficient Objects Migration} 
+\subsection{Efficient Object Migration} 
 
 \label{sec:moveobjects}
 
@@ -105,7 +105,7 @@ After the migration,  the \texttt{Tail} pointer can be set to the original $nth$
 \caption{An array of freelists for per-node heap\label{fig:listarray}}
 \vspace{-0.2in}
 \end{wrapfigure}
-In order to avoid the bottleneck of the per-node heap, \NM{} introduces a circular array of freelists as shown in Fig.~\ref{fig:listarray}, where the number of entries is a variable that can be changed by the compilation flag. Each entry has two pointers, head and tail separately. In order to support the put and get operations to the freelist, this array has two pointers, \texttt{toGetIndex} and  \texttt{toPutIndex}. If a thread tries to obtain freed objects from the per-node heap, it will obtain all  objects pointed by the \texttt{toGetIndex}, and increment the index afterwards. If the freelist pointed by the \texttt{toGetIndex} has no freed objects, there is no freed objects in the per-node freelist for this size class.  The put operation will utilize the pointer \texttt{toPutIndex}. There are two scenarios for the put operation. First, a thread may put an freed object directly to the per-node freelist, if this object is originated from a different node that the thread does not belong to. In this case, the object will be placed into the freelist pointed by the \texttt{toPutIndex}, but the index is not updated after the deallocation. Second, when freed objects in a per-thread freelist is above the predefined watermark, the thread will migrate a batch of objects to the freelist pointed by the \texttt{toPutIndex}. After this migration, the current freelist is considered to be full, and will update the index to the next entry in the circular array.
+In order to avoid the bottleneck of the per-node heap, \NM{} introduces a circular array of freelists as shown in Fig.~\ref{fig:listarray}, where the number of entries is a variable that can be changed by the compilation flag. Each entry has two pointers, head and tail separately. In order to support the put and get operations to the freelist, this array has two pointers, \texttt{toGetIndex} and  \texttt{toPutIndex}. If a thread tries to obtain freed objects from the per-node heap, it will obtain all  objects pointed by the \texttt{toGetIndex}, and increment the index afterward. If the freelist pointed by the \texttt{toGetIndex} has no freed objects, there is no freed objects in the per-node freelist for this size class.  The put operation will utilize the pointer \texttt{toPutIndex}. There are two scenarios for the put operation. First, a thread may put an freed object directly to the per-node freelist, if this object is originated from a different node that the thread does not belong to. In this case, the object will be placed into the freelist pointed by the \texttt{toPutIndex}, but the index is not updated after the deallocation. Second, when freed objects in a per-thread freelist is above the predefined watermark, the thread will migrate a batch of objects to the freelist pointed by the \texttt{toPutIndex}. After this migration, the current freelist is considered to be full, and will update the index to the next entry in the circular array.
 
    
 
@@ -120,7 +120,7 @@ In order to avoid the bottleneck of the per-node heap, \NM{} introduces a circul
 \paragraph{Encouraging Memory Reutilization:} In \NM{}, every thread has its own freelists for each size class so that there is no need to acquire the lock when an allocation can be satisfied from its per-thread heap, similar to TcMalloc. That is, two threads will not share the same per-thread heap. However, some applications may create new threads after some threads have exited. \NM{} re-utilizes the memory for these exited threads. Basically, \NM{} intercepts thread joins and cancels so that it can assign heaps of exited threads for newly-created threads, and re-utilize their heaps correspondingly.  
 
 
-\paragraph{Transparent Huge Page Support:} During the development, we noticed that excessive memory consumption can be imposed when the OS enables transparent huge pages by default. In order to reduce memory consumption, \NM{} makes multiple threads share the same bag (for the same size class), instead of having a separate bag for each thread. If each thread is running out of the memory, it obtains multiple objects at a time from the corresponding bag. Currently, if a class size is less than one page, then we will at most get objects with the total size of one normal page. Otherwise, it will get 4 objects (with the size less than 64 KB) or 2 objects afterwards. Based on our evaluation, this mechanism actually reduces the memory consumption for multiple times for a machine with 128 cores and 8 nodes, with the transparent huge page support by default.  
+\paragraph{Transparent Huge Page Support:} During the development, we noticed that excessive memory consumption can be imposed when the OS enables transparent huge pages by default. In order to reduce memory consumption, \NM{} makes multiple threads share the same bag (for the same size class), instead of having a separate bag for each thread. If each thread is running out of the memory, it obtains multiple objects at a time from the corresponding bag. Currently, if a class size is less than one page, then we will at most get objects with the total size of one normal page. Otherwise, it will get 4 objects (with the size less than 64 KB) or 2 objects afterward. Based on our evaluation, this mechanism actually reduces the memory consumption for multiple times for a machine with 128 cores and 8 nodes, with the transparent huge page support by default.  
 
 %we propose the combination of per-node heap and per-thread cache. In order to reduce the contention, \NM{} will obtain multiple objects at a time from the per-node heap. 
 
