--- a/paper/numalloc.tex
+++ b/paper/numalloc.tex
@@ -1,4 +1,4 @@
-\documentclass[acmsmall,review,anonymous]{acmart}
+\documentclass[sigplan,screen,review,10pt]{acmart}
 \settopmatter{printfolios=true,printccs=false,printacmref=false}
 
 \usepackage{times}
@@ -31,7 +31,6 @@
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
 
-\newcommand{\eurosyssubmissionnumber}{\#147, 12 pages}
 \newcommand{\todo}[1]{{\color{red}\bfseries [[#1]]}}
 \newcommand{\TP}[1]{{\color{red}\bfseries [[#1]]}}
 
@@ -53,19 +52,9 @@
 \newcommand{\specialcell}[2][c]{%
   \begin{tabular}[#1]{@{}c@{}}#2\end{tabular}}
 
-%%
-%% \BibTeX command to typeset BibTeX logo in the docs
-\AtBeginDocument{%
-  \providecommand\BibTeX{{%
-    \normalfont B\kern-0.5em{\scshape i\kern-0.25em b}\kern-0.8em\TeX}}}
-
-\citestyle{acmauthoryear}
-\def\bibfont{\normalfont}
-% May send this work to Emery and Qiang zheng for their feedbacks. 
-
 \begin{document}
 
-\title{NUMAlloc: Fine-grained NUMA Memory Allocator}
+\title{NUMAlloc: Fine-Grained NUMA Memory Allocator}
 \author{Anonymous}
 
 \input{abstract}
@@ -75,7 +64,7 @@
 
 \date{}
 
-\keywords{Non-Uniform Memory Access, Memory Allocator, NUMA Allocator}  %% \keywords are mandatory in final camera-ready submission
+\keywords{Non-Uniform Memory Access, Memory Allocator, NUMA Allocator}  
 
 \input{intro}
 \input{overview}
